{"maps":[{"name":"gameplay","actions":[{"name":"lookTouch","bindings":[]},{"name":"movementTouch","bindings":[]},{"name":"touchDelta","bindings":[]}],"bindings":[{"name":"","path":"*/{Point}","interactions":"","groups":"","action":"movement","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<Touchscreen>/position","interactions":"","groups":"","action":"look","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<Touchscreen>/position","interactions":"","groups":"","action":"point","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<Touchscreen>/position","interactions":"","groups":"","action":"movementTouch","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<Touchscreen>/position","interactions":"","groups":"","action":"lookTouch","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""},{"name":"","path":"<Touchscreen>/touch/delta","interactions":"","groups":"","action":"touchDelta","chainWithPrevious":false,"isComposite":false,"isPartOfComposite":false,"modifiers":""}]}]}